[gd_scene load_steps=16 format=2]

[ext_resource path="res://fondo.jpg" type="Texture" id=1]
[ext_resource path="res://FairyA2.png" type="Texture" id=2]
[ext_resource path="res://FairyA.3png.png" type="Texture" id=3]
[ext_resource path="res://Meloncito/melo_1.png" type="Texture" id=4]
[ext_resource path="res://FairyA.png" type="Texture" id=5]
[ext_resource path="res://Fresita/fresi_1.png" type="Texture" id=6]
[ext_resource path="res://Macedonia/Salad_Bowl (16 x 16).png" type="Texture" id=7]
[ext_resource path="res://SPARKLES/s_1.png" type="Texture" id=8]
[ext_resource path="res://Macedonia/n_1.png" type="Texture" id=9]
[ext_resource path="res://SPARKLES/s_2.png" type="Texture" id=10]
[ext_resource path="res://SPARKLES/s_4.png" type="Texture" id=11]
[ext_resource path="res://SPARKLES/s_3.png" type="Texture" id=12]
[ext_resource path="res://FINAL.gd" type="Script" id=13]
[ext_resource path="res://SONIDOS/success-1-6297.mp3" type="AudioStream" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[node name="FINAL" type="Node2D"]
script = ExtResource( 13 )

[node name="Fondo" type="Sprite" parent="."]
position = Vector2( 193.5, 114 )
scale = Vector2( 0.528533, 0.315217 )
texture = ExtResource( 1 )

[node name="SaladBowl(16X16)" type="Sprite" parent="."]
position = Vector2( 182, 126 )
scale = Vector2( 3.25, 2.8125 )
texture = ExtResource( 7 )

[node name="Fresi1" type="Sprite" parent="SaladBowl(16X16)"]
position = Vector2( 5.81952, 2.4185 )
scale = Vector2( 0.186108, 0.216319 )
texture = ExtResource( 6 )

[node name="Melo1" type="Sprite" parent="SaladBowl(16X16)"]
position = Vector2( -5.84616, 2.84445 )
scale = Vector2( 0.218846, 0.251222 )
texture = ExtResource( 4 )

[node name="N1" type="Sprite" parent="."]
position = Vector2( 181, 125 )
scale = Vector2( 0.78, 0.759259 )
texture = ExtResource( 9 )

[node name="FairyA" type="Sprite" parent="."]
position = Vector2( 181, 63 )
texture = ExtResource( 5 )

[node name="FairyA2" type="Sprite" parent="."]
position = Vector2( 278, 100 )
texture = ExtResource( 2 )

[node name="FairyA3Png" type="Sprite" parent="."]
position = Vector2( 82, 99 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 143, 165 )
scale = Vector2( 0.410112, 0.430693 )
frames = SubResource( 1 )
animation = "Idle"

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 209, 164 )
scale = Vector2( 0.410112, 0.430693 )
frames = SubResource( 1 )
animation = "Idle"

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 123, 59 )
scale = Vector2( 0.410112, 0.430693 )
frames = SubResource( 1 )
animation = "Idle"

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
position = Vector2( 244, 58 )
scale = Vector2( 0.410112, 0.430693 )
frames = SubResource( 1 )
animation = "Idle"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 106.0
margin_top = 179.0
margin_right = 329.0
margin_bottom = 204.0

[node name="FINAL" type="Label" parent="VBoxContainer"]
margin_right = 223.0
margin_bottom = 14.0
text = "Â¡GRACIAS POR AYUDARNOS!"

[node name="Final" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
